fix modal covered by navbar

--- a/tahp/public/css/desk.css
+++ b/tahp/public/css/desk.css
@@ -297,3 +297,7 @@ a:hover {
   transform: none !important;
   z-index: 1050000 !important;
 }
+
+.modal-content {
+  top: 60px !important
+}
